# basicly

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  basicly.toml  package-lock.json  package.json  pyproject.toml
.basicly/: README.md  generated-manifest.json
.beads/: config.yaml  issues.jsonl
.claude/: CLAUDE.md  settings.json
.claude/rules/: python-style.md  quirks.md  test-discipline.md
.github/: copilot-instructions.md
.scripts/: README.md  bootstrap.ps1  bootstrap.sh  generate_release_changelog.py  setup_git_identity.py
docs/: architecture.md  factory-design.md  file-audit.md  foundry-spike.md  harness-eval.md  hook-runner-decision.md  index.html  releases.md  three-loop-factory-design.md
src/basicly/: __init__.py  (+36 more)
tests/: test_agents.py  test_bootstrap.py  test_br_adapter.py  test_catalog.py  test_catalog_lint.py  test_catalog_verify.py  test_classify.py  test_claude_settings.py  test_cli.py  test_cli_loop.py  test_cli_policy.py  test_cli_runner.py  test_cli_scaffold.py  test_config.py  test_decisions.py  test_decompose.py  test_docs_drift.py  test_fleet.py  test_health.py  test_hooks.py  test_loader.py  test_loop.py  test_loop_state.py  test_merge.py  test_needs_input.py  test_permissions.py  test_planner.py  test_policy.py  test_projection.py  test_protect_generated_commit.py  test_redact.py  test_release_changelog.py  test_release_workflow.py  test_renderers.py  test_review.py  test_rubrics.py  test_run_record.py  test_runner.py  test_secret_scan.py  test_setup_git_identity.py  (+6 more)
(+83 files in other folders)
