[project]
name = "basicly"
version = "0.1.0"
description = "Harness distribution and projection tooling for coding agents"
requires-python = ">=3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "jinja2>=3.1.6",
  "jsonschema>=4.26.0",
  "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "bandit>=1.9.4",
  "curlylint>=0.13.1",
  "djlint>=1.40.4",
  "import-linter>=2.13",
  "pip-audit>=2.10.1",
  "pre-commit>=4.6",
  "pyproject-fmt>=2.25.2",
  "pyright>=1.1.411",
  "pytest>=9.1.1",
  "ruff>=0.15.21",
  "vulture>=2.16",
]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
addopts = ["--import-mode=importlib"]

[tool.pyright]
extraPaths = ["src", "."]
typeCheckingMode = "basic"

[project.scripts]
basicly = "basicly.cli:main"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.hatch.build.targets.wheel]
packages = ["src/basicly"]
exclude = ["**/__pycache__", "**/*.pyc"]

# Ship the managed core catalog inside the wheel so `basicly init`/`update` can
# materialize it into a fresh consumer repo. The authoring source stays at
# `.basicly/core/` (dogfooded here); it is projected to `basicly/catalog/` in
# the built distribution only. See src/basicly/catalog.py for the locator.
[tool.hatch.build.targets.wheel.force-include]
".basicly/core" = "basicly/catalog"

[tool.uv]
package = true
